<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_speech"
        android:checkableBehavior="single">
        <item
            android:id="@+id/ttsFragment"
            android:icon="@drawable/ic_volume_up"
            android:title="@string/tab_tts"/>
        <item
            android:id="@+id/emotionFragment"
            android:icon="@drawable/ic_emotion"
            android:title="@string/tab_emotion"/>
        <item
            android:id="@+id/sttFragment"
            android:icon="@drawable/ic_mic"
            android:title="@string/tab_stt"/>
    </group>

    <item android:title="@string/group_text_input">
        <menu>
            <group android:id="@+id/group_input"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/ocrFragment"
                    android:icon="@drawable/ic_ocr"
                    android:title="@string/tab_ocr"/>
                <item
                    android:id="@+id/pdfFragment"
                    android:icon="@drawable/ic_pdf"
                    android:title="@string/tab_pdf"/>
                <item
                    android:id="@+id/webFetchFragment"
                    android:icon="@drawable/ic_web"
                    android:title="@string/tab_web"/>
                <item
                    android:id="@+id/correctionFragment"
                    android:icon="@drawable/ic_spellcheck"
                    android:title="@string/tab_correction"/>
                <item
                    android:id="@+id/bookReaderFragment"
                    android:icon="@drawable/ic_book"
                    android:title="@string/tab_book_reader"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/group_library">
        <menu>
            <group android:id="@+id/group_library"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/modiFragment"
                    android:icon="@drawable/ic_translate"
                    android:title="@string/tab_modi"/>
                <item
                    android:id="@+id/stotraFragment"
                    android:icon="@drawable/ic_stotra"
                    android:title="@string/tab_stotra"/>
                <item
                    android:id="@+id/testDashboardFragment"
                    android:icon="@drawable/ic_emotion"
                    android:title="@string/tab_test"/>
            </group>
        </menu>
    </item>

</menu>
